creation de login activity - diagonal layout - loading button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="etechBlue">#1da0cc</color>
     <color name="etechGreen">#9fc802</color>
     <color name="etechBlack">#2b2b2b</color>
-
+    <color name="white">#ffffff</color>
+    <color name="darkGray">#444444</color>
+    <color name="etechBlueDark">#33acd4</color>
 </resources>
