--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="mg.etech.mobile.etechapp.presentation.activities.login.LoginActivity">
+    tools:context="mg.etech.mobile.etechapp.presentation.activities.login.LoginActivity"
+    android:background="@color/etechBlack"
+    >
 
-    <TextView
+    <com.github.florent37.diagonallayout.DiagonalLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:diagonal_position="bottom"
+        android:elevation="10dp"
+        android:id="@+id/diagonalLoginHeader"
+        app:diagonal_angle="10"
+        app:diagonal_direction="left"
+
+        >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/etech_logo"
+            android:background="@color/white"
+            />
+
+
+    </com.github.florent37.diagonallayout.DiagonalLayout>
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="bienvenue dans activity Login"
-        />
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        >
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/general_padding1_5x"
+            android:orientation="vertical"
+            >
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Identifiant"
+                style="@style/edt_general_style" />
+
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Mot de passe"
+                style="@style/edt_general_style"
+                android:inputType="textPassword"
+                />
+
+
+            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
+                android:id="@+id/progressBtnLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rond_shape"
+                android:text="Se connecter"
+                app:spinning_bar_width="4dp"
+                app:spinning_bar_color="#FFF"
+                app:spinning_bar_padding="6dp"
+                android:layout_gravity="center"
+                android:padding="@dimen/general_padding"
+            />
+
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceButton
+                android:id="@+id/btnSinscrire"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="S'inscrire"
+                android:background=""
+                />
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
