--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="edt_general_style">
+        <item name="android:padding">12dp</item>
+        <item name="android:color">@color/etechBlue</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/etechBlue</item>
+        <item name="android:textSize">@dimen/general_font_size</item>
+    </style>
+
 </resources>
