--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="general_padding1_5x">22dp</dimen>
     <dimen name="general_padding2x">30dp</dimen>
     <dimen name="general_font_size">21sp</dimen>
+    <dimen name="general_margin">15dp</dimen>
 </resources>
