--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="mg.etech.mobile.etechapp.presentation.activities.main.MainActivity">
+    tools:context="mg.etech.mobile.etechapp.presentation.activities.main.MainActivity"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="match_parent"
@@ -20,8 +22,21 @@
         android:layout_height="wrap_content"
         android:text="logout"
         android:gravity="center"
-        android:layout_centerInParent="true"
         android:id="@+id/btnLogout"
         />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btnPrendrePhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Prendre une photo"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/myImageView"
+
+        />
+
+</LinearLayout>
