--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,9 @@
         <item name="android:layout_margin">@dimen/general_margin</item>
     </style>
 
+    <style name="image_button_dimens">
+        <item name="android:width">50dp</item>
+        <item name="android:height">50dp</item>
+    </style>
+
 </resources>
