--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,10 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:diagonal_position="bottom"
-        android:elevation="10dp"
         android:id="@+id/diagonalLoginHeader"
         app:diagonal_angle="10"
         app:diagonal_direction="left"
+        android:background="@color/etechBlack"
 
         >
 
