--- a/app/src/main/res/layout/viewgroup_base64_photo_picker.xml
+++ b/app/src/main/res/layout/viewgroup_base64_photo_picker.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/general_padding"
     android:layout_gravity="center"
-
+    android:background="@drawable/rond_shape_flip_front"
+    android:layout_margin="@dimen/general_margin"
     >
 
     <ImageView
@@ -32,6 +33,8 @@
         android:id="@+id/btnTakePhoto"
         android:layout_margin="@dimen/little_maring"
         />
+
+
 
 
 
