--- a/app/src/main/res/layout/itemview_list_employe.xml
+++ b/app/src/main/res/layout/itemview_list_employe.xml
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/general_padding">
 
-    <TextView
-        android:layout_width="match_parent"
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:src="@drawable/ic_default_icon"
+        app:riv_oval="true"
+        app:riv_corner_radius="50dp"
+        android:id="@+id/imageViewItemPhoto" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/general_padding"
-        android:id="@+id/txtItemNom" />
+        android:orientation="vertical"
+        android:padding="@dimen/general_padding">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/general_font_size"
+            android:id="@+id/txtItemMatricule"
+            android:text="first" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtItemNom"
+            android:text="Randrianarisaona Mahery Haja" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
