--- a/app/src/main/res/layout/viewgroup_base64_photo_picker.xml
+++ b/app/src/main/res/layout/viewgroup_base64_photo_picker.xml
@@ -14,7 +14,7 @@
         android:layout_height="@dimen/image_button_dimens"
         android:src="@drawable/ic_upload_photo"
         android:id="@+id/btnUploadPhoto"
-        android:layout_margin="@dimen/little_maring"
+        android:layout_margin="@dimen/little_margin"
         />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_height="@dimen/image_button_dimens"
         android:text="@string/choisir_prendre_une_photo"
         android:gravity="center"
-        android:layout_margin="@dimen/little_maring"
+        android:layout_margin="@dimen/little_margin"
         android:textSize="@dimen/little_font_size"
         />
 
@@ -31,7 +31,7 @@
         android:layout_height="@dimen/image_button_dimens"
         android:src="@drawable/ic_take_photo"
         android:id="@+id/btnTakePhoto"
-        android:layout_margin="@dimen/little_maring"
+        android:layout_margin="@dimen/little_margin"
         />
 
 
