--- a/app/src/main/res/layout/fragment_detail_employe.xml
+++ b/app/src/main/res/layout/fragment_detail_employe.xml
@@ -5,83 +5,127 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="mg.etech.mobile.etechapp.presentation.fragments.employe.detail.DetailEmployeFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:layout_width="@dimen/detail_employe_photo_size"
-            android:layout_height="@dimen/detail_employe_photo_size"
-            android:src="@drawable/ic_default_icon"
-            app:riv_corner_radius="60dip" />
-
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="matricule: 483"
-            android:padding="@dimen/little_padding"
-            android:id="@+id/txtDetailMatricule" />
-
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/general_font_size1.5x"
-            android:text="NOM et prenom de l'employe"
-            android:id="@+id/txtDetailNom" />
-
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtDetailAlias"
-            android:text="(Alias)" />
-
-
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/general_font_size"
-            android:text="Poste de l'employé"
-            android:id="@+id/txtPosteActuel" />
+        android:fillViewport="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/little_padding">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/detail_employe_photo_size"
+                    android:background="@color/etechBlack"></LinearLayout>
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="@dimen/detail_employe_photo_size"
+                    android:layout_height="@dimen/detail_employe_photo_size"
+                    android:src="@drawable/ic_mahery"
+                    android:id="@+id/imageView_detailPhoto"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/detail_employe_photo_size_half"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="5dp" />
+
+
+            </RelativeLayout>
 
             <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtDetailBirthDate"
-                android:text="30/04/1993" />
+                android:text="@string/detail_matricule"
+                android:id="@+id/txtDetailMatricule"
+                android:padding="@dimen/little_padding" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/general_font_size"
+                    android:text="NOM et prenom de l'employe"
+                    android:id="@+id/txtDetailNom"
+                    android:padding="@dimen/little_padding" />
+
+                <ImageView
+                    android:layout_width="@dimen/general_font_size2x"
+                    android:layout_height="@dimen/general_font_size2x"
+                    android:src="@drawable/ic_homme_backup"
+                    android:id="@+id/imageView_detailIsMale" />
+            </LinearLayout>
 
             <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtDetailAge"
-                android:text="24 ans" />
+                android:id="@+id/txtDetailAlias"
+                android:text="@string/detail_allias"
+                android:padding="@dimen/little_padding" />
+
+
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/general_font_size"
+                android:text="Poste de l'employé"
+                android:id="@+id/txtPosteActuel"
+                android:padding="@dimen/little_padding" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/little_padding">
+
+                <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtDetailBirthDate"
+                    android:text="@string/detail_birth_date"
+                    android:padding="@dimen/little_padding" />
+
+                <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtDetailAge"
+                    android:text="@string/detail_age"
+                    android:padding="@dimen/little_padding" />
+
+            </LinearLayout>
+
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtDetailHiringDate"
+                android:text="@string/detail_embauche"
+                android:padding="@dimen/little_padding" />
+
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_mail"
+                android:id="@+id/txtDetailMail"
+                android:padding="@dimen/little_padding" />
+
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="HISTORIQUE DES POSTES"
+                android:layout_margin="@dimen/little_margin"
+                android:padding="@dimen/little_padding" />
+
         </LinearLayout>
 
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtDetailHiringDate"
-            android:text="24/08/2017" />
-
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ygunion@gmail.com"
-            android:id="@+id/txtDetailMail"
-
-            />
-
-        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HISTORIQUE DES POSTES"
-            android:layout_margin="@dimen/little_margin" />
-
-    </LinearLayout>
+    </ScrollView>
 </FrameLayout>
