--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#ffffff</color>
     <color name="darkGray">#444444</color>
     <color name="etechBlueDark">#33acd4</color>
+    <color name="etechGirlpink">#ffaaff</color>
 </resources>
