--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,9 +9,12 @@
     <dimen name="general_padding2x">30dp</dimen>
     <dimen name="general_font_size">21sp</dimen>
     <dimen name="general_font_size1.5x">27sp</dimen>
+    <dimen name="general_font_size2x">40sp</dimen>
     <dimen name="little_font_size">17sp</dimen>
     <dimen name="general_margin">15dp</dimen>
     <dimen name="image_button_dimens">64dp</dimen>
-    <dimen name="little_margin">3dp</dimen>
+    <dimen name="little_margin">2dp</dimen>
+
     <dimen name="detail_employe_photo_size">150dp</dimen>
+    <dimen name="detail_employe_photo_size_half">75dp</dimen>
 </resources>
