--- a/app/src/main/res/layout/activity_create_employe.xml
+++ b/app/src/main/res/layout/activity_create_employe.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="mg.etech.mobile.etechapp.presentation.activities.employe.createEmloye.CreateEmployeActivity"
     android:orientation="vertical"
-    tools:context=".presentation.activities.employe.detailemploye.DetailEmployeActivity">
+    android:background="@color/etechBlack">
 
-
-    <FrameLayout
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragmentDetailEmploye" />
+        android:name="mg.etech.mobile.etechapp.presentation.fragments.employe.create.CreateEmployeFragment_"
+        tools:layout="@layout/fragment_create_employe"
+        android:id="@+id/fragmenCreateEmploye"
 
+        ></fragment>
 
 </LinearLayout>
