--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,4 +66,18 @@
 
         />
 
+    <com.github.clans.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_above="@id/mainViewPagerTab"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        fab:fab_colorNormal="@color/etechGreen"
+        fab:fab_colorPressed="@color/etechBlueDark"
+        fab:fab_colorRipple="@color/etechBlack"
+        android:src="@drawable/ic_add"
+        android:id="@+id/btnAddEmploye"
+        android:visibility="invisible" />
+
 </RelativeLayout>
